[tool.poetry]
name = "cod-analytics"
version = "0.1.0"
description = ""
authors = ["Cesar E. Garza <cesar@cegarza.com>"]
readme = "README.md"
packages = [{include = "cod_analytics"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.3"
numba = "^0.56.2"
pandas = "^1.5.0"
scipy = "^1.9.1"
pandera = {extras = ["mypy"], version = "^0.12.0"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.3"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
darglint = "^1.8.1"
mypy = "^0.971"
pytest = "^7.1.3"
openpyxl = "^3.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
pretty = true

[tool.isort]
profile = "black"
line_length = 80
src_paths = ["cod_analytics"]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
    "-v",
    "--tb=auto",
    "--showlocals",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow",
]